--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
     "debug": "DEBUG=cf* npm run test",
+    "lint": "./node_modules/eslint/bin/eslint.js .",
     "start": "node server.js"
   },
   "repository": {
