--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   },
   "homepage": "https://github.com/irvinemd55/olayers#readme",
   "devDependencies": {
+    "aws-sdk-mock": "^1.6.1",
     "chai": "^3.5.0",
     "eslint": "^3.14.1",
     "mocha": "^3.2.0",
     "superagent": "^3.4.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.9.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
